--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "style-loader": "^0.20.3",
     "url-loader": "^0.6.2",
     "webpack": "^3.12.0",
-    "webpack-cli": "^3.3.7"
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "2.9.1"
   },
   "directories": {
     "doc": "docs"
