Configure application for hot reloading while modifying css and js files

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/js/index.js",
   "scripts": {
     "start": "webpack",
+    "start:dev": "webpack-dev-server",
     "postinstall": "mv ./node_modules/semantic-ui-less/theme.config.example ./node_modules/semantic-ui-less/theme.config"
   },
   "author": "",
