--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "gulp": "^4.0.2"
+  },
   "devDependencies": {
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -21,6 +23,7 @@
     "less-loader": "^4.1.0",
     "resolve-url-loader": "^2.2.1",
     "semantic-ui-dropdown": "^2.4.1",
+    "semantic-ui-popup": "^2.3.1",
     "semantic-ui-less": "^2.3.0",
     "semantic-ui-transition": "^2.3.1",
     "style-loader": "^0.20.3",
