--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "ansi_up": "^4.0.4",
     "clipboard": "^2.0.6",
     "css-loader": "^3.1.0",
     "file-loader": "^3.0.1",
@@ -26,6 +27,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^2.0.5",
     "resolve-url-loader": "^2.2.1",
+    "sanitize-html": "^1.23.0",
     "semantic-ui-dimmer": "^2.4.0",
     "semantic-ui-dropdown": "^2.4.1",
     "semantic-ui-less": "^2.4.1",
