--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "create-fomantic-icons": "^1.0.4"
+  },
   "devDependencies": {
     "ansi_up": "^4.0.4",
     "clipboard": "^2.0.6",
