--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "Read the Docs site theme",
   "main": "src/js/index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --mode=production --progress --colors",
+    "dev": "webpack-dev-server --mode=development",
+    "lint": "prettier -c .",
+    "format": "prettier --write ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
     "create-fomantic-icons": "^1.0.4"
   },
   "devDependencies": {
     "ansi_up": "^4.0.4",
+    "babel-loader": "^8.1.0",
     "clipboard": "^2.0.6",
     "css-loader": "^3.1.0",
     "file-loader": "^3.0.1",
