Add a bunch of javascript, mostly for knockout views, also SUI modules

--- a/package.json
+++ b/package.json
@@ -35,12 +35,16 @@
     "prettier": "^2.0.5",
     "resolve-url-loader": "^2.2.1",
     "sanitize-html": "^1.23.0",
+    "semantic-ui-accordion": "^2.3.1",
+    "semantic-ui-api": "^2.3.1",
     "semantic-ui-dimmer": "^2.4.0",
     "semantic-ui-dropdown": "^2.4.1",
     "semantic-ui-less": "^2.4.1",
     "semantic-ui-modal": "^2.4.1",
     "semantic-ui-popup": "^2.3.1",
     "semantic-ui-progress": "^2.3.1",
+    "semantic-ui-search": "^2.3.3",
+    "semantic-ui-tab": "^2.3.1",
     "semantic-ui-transition": "^2.3.1",
     "style-loader": "^0.23.1",
     "url-loader": "^0.6.2",
