--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,8 @@ __pycache__/
 *.DS_Store
 docs/_build/
 
+# Temporary. Not sure if we should submodule vendor this or not
+/crispy-semantic-ui.git/
+
 # VS code generated files
 .vscode/
