--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Read the Docs site theme",
   "main": "src/js/index.js",
   "scripts": {
-    "build": "webpack --mode=production --progress --colors",
+    "clean-js": "rm -v readthedocsext/theme/static/readthedocsext/theme/js/*.js; exit 0",
+    "clean-css": "rm -v readthedocsext/theme/static/readthedocsext/theme/css/*.css; exit 0",
+    "clean": "npm run clean-js && npm run clean-css",
+    "build": "npm run clean && webpack --mode=production --progress --colors",
     "dev": "webpack-dev-server --mode=development",
     "lint": "prettier -c .",
     "format": "prettier --write ."
@@ -21,6 +24,7 @@
     "babel-loader": "^8.1.0",
     "clipboard": "^2.0.6",
     "css-loader": "^3.1.0",
+    "dayjs": "^1.8.29",
     "file-loader": "^3.0.1",
     "imports-loader": "^0.8.0",
     "jquery": "^3.4.1",
@@ -30,7 +34,6 @@
     "less-loader": "^4.1.0",
     "matchdep": "~1.0.1",
     "mini-css-extract-plugin": "^0.6.0",
-    "moment": "^2.24.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^2.0.5",
     "resolve-url-loader": "^2.2.1",
