--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "ansi_up": "^4.0.4",
     "babel-loader": "^8.1.0",
+    "chart.js": "^2.9.3",
     "clipboard": "^2.0.6",
     "css-loader": "^3.1.0",
     "dayjs": "^1.8.29",
