--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "npm run clean && webpack --mode=production --progress --colors",
     "dev": "webpack-dev-server --mode=development",
     "lint": "prettier -c .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "jest src/js/tests/"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "create-fomantic-icons": "^1.0.4"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "ansi_up": "^4.0.4",
     "babel-loader": "^8.1.0",
     "chart.js": "^2.9.3",
@@ -28,6 +30,7 @@
     "dayjs": "^1.8.29",
     "file-loader": "^3.0.1",
     "imports-loader": "^0.8.0",
+    "jest": "^26.4.2",
     "jquery": "^3.4.1",
     "knockout": "^3.5.1",
     "lato-font": "^3.0.0",
@@ -70,5 +73,14 @@
   "bugs": {
     "url": "https://github.com/readthedocs/ext-theme/issues"
   },
-  "homepage": "https://github.com/readthedocs/ext-theme#readme"
+  "homepage": "https://github.com/readthedocs/ext-theme#readme",
+  "babel": {
+    "env": {
+      "test": {
+        "plugins": [
+          "@babel/plugin-transform-modules-commonjs"
+        ]
+      }
+    }
+  }
 }
