--- a/setup.cfg
+++ b/setup.cfg
@@ -20,8 +20,7 @@ classifiers =
     Framework :: Django
 
 [options]
-packages = find:
-namespace_packages = readthedocsext
+packages = find_namespace:
 include_package_data = True
 zip_safe = False
 install_requires =
