--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ classifiers =
     Framework :: Django
 
 [options]
-packages = find_namespace:
+packages = find:
 include_package_data = True
 zip_safe = False
 install_requires =
