Revert "Convert package to native namespace package"
This reverts commit 591614ebee273e90ec6c27ff8f68f8fe4aadb4d1.

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,8 @@ classifiers =
     Framework :: Django
 
 [options]
-packages = find_namespace:
+packages = find:
+namespace_packages = readthedocsext
 include_package_data = True
 zip_safe = False
 install_requires =
