Finish up on the docs for JS and templates
This uses sphinx-js and jsdoc to extract docs from the JS sources, and
autoanysrc to extract docs from the templates. This tries to explain
some of the interaction and patterns used between JS and the templates
as well, as there are a few pieces of glue to make the application and
front end code work well together.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 node_modules
-package-lock.json
 .ropeproject
 dist/
 __pycache__/
@@ -7,6 +6,10 @@ __pycache__/
 *.egg-info
 *.DS_Store
 docs/_build/
+docs/out/
+build/
+.python-version
+.node-version
 
 # Temporary. Not sure if we should submodule vendor this or not
 /crispy-semantic-ui.git/
