--- a/setup.cfg
+++ b/setup.cfg
@@ -27,3 +27,12 @@ zip_safe = False
 install_requires =
     Django
     crispy-forms-semantic-ui
+
+[options.extras_require]
+docs =
+    Jinja2~=2.3
+    MarkupSafe~=2.0.0
+    Sphinx~=4.4.0
+    sphinx_rtd_theme~=1.0.0
+    sphinxcontrib-autoanysrc>=0.1.1
+    sphinx-js~=3.1.2
