--- a/tox.ini
+++ b/tox.ini
@@ -22,8 +22,8 @@ commands =
 [testenv:lint]
 description = run pre-commit to ensure the changes are valid against our lintings
 deps =
-   pre-commit
+    pre-commit
 commands =
     # FIXME: use `github.event.pull_request.base.sha` in `--from-ref` because if
     # the base branch is different, this won't work as expected
-    pre-commit run --from-ref main --to-ref HEAD
+    /bin/sh -c 'git diff --cached --quiet && pre-commit run --from-ref main --to-ref HEAD || pre-commit run'
