--- a/tox.ini
+++ b/tox.ini
@@ -27,3 +27,4 @@ commands =
     # FIXME: use `github.event.pull_request.base.sha` in `--from-ref` because if
     # the base branch is different, this won't work as expected
     /bin/sh -c 'git diff --cached --quiet && pre-commit run --from-ref main --to-ref HEAD || pre-commit run'
+    /bin/sh -c 'git diff --cached --quiet && pre-commit run --config .pre-commit-config-local.yaml --from-ref main --to-ref HEAD || pre-commit run --config .pre-commit-config-local.yaml'
