--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ skipsdist = True
 setenv =
     LANG=en_US.UTF-8
     LC_ALL=en_US.UTF-8
+    PATH={toxinidir}/node_modules/.bin:{env:PATH}
 passenv = CI HOME
 
 [testenv:docs]
@@ -14,7 +15,8 @@ changedir = {toxinidir}/docs
 deps =
     Sphinx<=5.0
     sphinx_rtd_theme
-    -e git+https://github.com/sphinx-contrib/autoanysrc@4c75486#egg=sphinxcontrib-autoanysrc
+    sphinxcontrib-autoanysrc
+    sphinx-js
 
 commands =
     sphinx-build -W --keep-going -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
