--- a/tox.ini
+++ b/tox.ini
@@ -12,14 +12,9 @@ passenv = CI HOME
 [testenv:docs]
 description = Build readthedocsext-theme documentation
 changedir = {toxinidir}/docs
-deps =
-    Sphinx<=5.0
-    sphinx_rtd_theme
-    sphinxcontrib-autoanysrc
-    sphinx-js
-
+deps = .[docs]
 commands =
-    sphinx-build -W --keep-going -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
+    sphinx-build -P -W --keep-going -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
 
 [testenv:lint]
 description = run pre-commit to ensure the changes are valid against our lintings
