--- a/.pre-commit-config-local.yaml
+++ b/.pre-commit-config-local.yaml
@@ -1,8 +1,7 @@
-exclude: '^$|settings|scripts'
+exclude: "^$|settings|scripts"
 fail_fast: false
 repos:
-
-- repo: https://github.com/pre-commit/mirrors-prettier
-  rev: v2.5.1
-  hooks:
-    - id: prettier
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v2.5.1
+    hooks:
+      - id: prettier
