--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,8 @@ install_requires =
 
 [options.extras_require]
 docs =
+    Jinja~=3.0.3
+    MarkupSafe~=2.1.0
     Sphinx~=4.4.0
     sphinx_rtd_theme~=1.0.0
     sphinxcontrib-autoanysrc>=0.1.1
