--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "create-fomantic-icons": "^1.0.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "ansi_up": "^4.0.4",
     "babel-loader": "^8.1.0",
@@ -76,10 +77,14 @@
   },
   "homepage": "https://github.com/readthedocs/ext-theme#readme",
   "babel": {
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
+    ],
     "env": {
       "test": {
         "plugins": [
-          "@babel/plugin-transform-modules-commonjs"
+          "@babel/plugin-transform-modules-commonjs",
+          "@babel/plugin-proposal-class-properties"
         ]
       }
     }
