--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,7 @@
 name = readthedocsext-theme
 version = 1.0.0
 license = MIT
-description = Read the Docs next generation theme
-author = Read the Docs, Inc
+description = Read the Docs next generation theme author = Read the Docs, Inc
 author_email = dev@readthedocs.com
 url = http://readthedocs.org
 classifiers =
@@ -32,7 +31,7 @@ install_requires =
 docs =
     Jinja2~=2.3
     MarkupSafe~=2.0.0
-    Sphinx~=4.4.0
+    Sphinx~=4.5.0
     sphinx_rtd_theme~=1.0.0
     sphinxcontrib-autoanysrc>=0.1.1
-    sphinx-js~=3.1.2
+    sphinx-js~=3.2.1
