--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "@babel/preset-env": "^7.10.2",
     "@readthedocs/sui-common-theme": "github:readthedocs/sui-common-theme#236e6b1",
+    "@stripe/stripe-js": "^1.54.0",
     "ansi_up": "^4.0.4",
     "babel-loader": "^8.1.0",
     "chart.js": "^2.9.3",
