--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "imports-loader": "^0.8.0",
     "jest": "^26.4.2",
     "jquery": "^3.4.1",
+    "jquery-address": "^1.6.0",
     "jsdoc": "^3.6.3",
     "knockout": "^3.5.1",
     "lato-font": "^3.0.0",
