--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Read the Docs site theme",
   "main": "src/js/index.js",
+  "type": "commonjs",
   "scripts": {
     "clean-js": "rm -v readthedocsext/theme/static/readthedocsext/theme/js/*.js; exit 0",
     "clean-css": "rm -v readthedocsext/theme/static/readthedocsext/theme/css/*.css; exit 0",
@@ -11,7 +12,9 @@
     "dev": "webpack-dev-server --mode=development",
     "lint": "prettier -c .",
     "format": "prettier --write .",
-    "test": "jest src/js/tests/"
+    "test": "web-test-runner",
+    "test:dev": "web-test-runner --watch",
+    "test:debug": "web-test-runner --manual --open"
   },
   "author": "",
   "license": "ISC",
@@ -20,8 +23,14 @@
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "@babel/preset-env": "^7.10.2",
+    "@open-wc/testing": "^3.2.0",
     "@readthedocs/sui-common-theme": "github:readthedocs/sui-common-theme#236e6b1",
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-image": "^3.0.2",
+    "@rollup/plugin-json": "^6.0.0",
     "@stripe/stripe-js": "^1.54.0",
+    "@web/dev-server-import-maps": "^0.1.1",
+    "@web/test-runner": "^0.17.1",
     "ansi_up": "^4.0.4",
     "babel-loader": "^8.1.0",
     "chart.js": "^2.9.3",
@@ -43,6 +52,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^2.0.5",
     "resolve-url-loader": "^2.2.1",
+    "rollup-plugin-lit-css": "^4.0.1",
     "sanitize-html": "^1.23.0",
     "style-loader": "^0.23.1",
     "url-loader": "^0.6.2",
