--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,10 @@ version: 2.1
 
 commands:
   run-lint:
-    description: "Run code tests and linter"
+    description: "Run code linter"
     steps:
       - checkout
       - run: npm ci
-      - run: npm test
       - run: npm run lint
   run-build:
     description: "Ensure built assets are up to date"
@@ -23,6 +22,12 @@ commands:
               git status readthedocsext/ --porcelain
               exit 1
             fi
+  run-test:
+    description: "Run code tests"
+    steps:
+      - checkout
+      - run: npm ci
+      - run: npm test
 
 jobs:
   lint:
@@ -35,6 +40,11 @@ jobs:
       - image: "cimg/node:16.14"
     steps:
       - run-build: {}
+  test:
+    docker:
+      - image: "cimg/node:16.14"
+    steps:
+      - run-test: {}
 
 workflows:
   version: 2
@@ -42,3 +52,4 @@ workflows:
     jobs:
       - lint
       - build
+      - test
