Switch to web-test-runner (#214)
* Switch to web-test-runner

Reusing some of what I went through with the addons testing work, I
tried to use web-test-runner here as well. Even though we aren't using
web components here yet, this pattern still works quite nicely for
testing some complex browser integration style tests.

This uses WTR, Rollup for bundling for tests, and I've created two test
cases: I translated old tests to Chai/WTR, and a new test that mixes
HTML and JS, using WTR HTML tests.

* Remove unneeded hack

* Update CI config

* More CI config

* Some cleanup and formatting

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,14 @@
 version: 2.1
 
+orbs:
+  browser-tools: circleci/browser-tools@1.4.6
+
 commands:
   run-lint:
-    description: "Run code tests and linter"
+    description: "Run code linter"
     steps:
       - checkout
       - run: npm ci
-      - run: npm test
       - run: npm run lint
   run-build:
     description: "Ensure built assets are up to date"
@@ -23,6 +25,14 @@ commands:
               git status readthedocsext/ --porcelain
               exit 1
             fi
+  run-test:
+    description: "Run test suite"
+    steps:
+      - browser-tools/install-chrome
+      - browser-tools/install-chromedriver
+      - checkout
+      - run: npm ci
+      - run: npm test
 
 jobs:
   lint:
@@ -35,6 +45,11 @@ jobs:
       - image: "cimg/node:16.14"
     steps:
       - run-build: {}
+  test:
+    docker:
+      - image: "cimg/node:16.14"
+    steps:
+      - run-test: {}
 
 workflows:
   version: 2
@@ -42,3 +57,4 @@ workflows:
     jobs:
       - lint
       - build
+      - test
