Some test additions from review
- Drops a redundant application test
- Adds tests for bad data into the Knockout init custom bindings
- Adds some more protection in the init bindings to avoid exceptions

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,7 +25,7 @@ repos:
       - id: check-yaml
       - id: destroyed-symlinks
       - id: end-of-file-fixer
-        exclude: "^dist/.*$"
+        exclude: "^readthedocsext/theme/static/.*$"
   - repo: https://github.com/rtts/djhtml
     rev: "3.0.6"
     hooks:
