Rework FUI integration for 2.9.3 support
This version implemented a new theme loading layer, `overrides.less`,
which I was not able to convince Webpack to override. So instead, I
tuned up how we were injecting our themes. The result is a bit more
standard now I feel, and one step closer to using the FUI source files
directly.

A few changes that 2.9.3 brought in: slightly different font loading,
icon loading, and duotone is now supported natively if we want to switch
back at some point.

The majority of the changes are on the common theme, in the
sui-common-theme repo.

--- a/src/sui/theme.config
+++ b/src/sui/theme.config
@@ -1,71 +1,76 @@
 // Global
-@site: "rtd-application";
-@reset: "rtd-application";
+@site: "rtd-common";
+@reset: "rtd-common";
 
 // Elements
-@button: "rtd-application";
-@container: "rtd-application";
-@divider: "rtd-application";
-@emoji: "rtd-application";
-@flag: "rtd-application";
-@header: "rtd-application";
-@icon: "rtd-application";
-@image: "rtd-application";
-@input: "rtd-application";
-@label: "rtd-application";
-@list: "rtd-application";
-@loader: "rtd-application";
-@placeholder: "rtd-application";
-@rail: "rtd-application";
-@reveal: "rtd-application";
-@segment: "rtd-application";
-@step: "rtd-application";
-@text: "rtd-application";
+@button: "rtd-common";
+@container: "rtd-common";
+@divider: "rtd-common";
+@emoji: "rtd-common";
+@flag: "rtd-common";
+@header: "rtd-common";
+@icon: "rtd-common";
+@image: "rtd-common";
+@input: "rtd-common";
+@label: "rtd-common";
+@list: "rtd-common";
+@loader: "rtd-common";
+@placeholder: "rtd-common";
+@rail: "rtd-common";
+@reveal: "rtd-common";
+@segment: "rtd-common";
+@step: "rtd-common";
+@text: "rtd-common";
 
 // Collections
-@breadcrumb: "rtd-application";
-@form: "rtd-application";
-@grid: "rtd-application";
-@menu: "rtd-application";
-@message: "rtd-application";
-@table: "rtd-application";
+@breadcrumb: "rtd-common";
+@form: "rtd-common";
+@grid: "rtd-common";
+@menu: "rtd-common";
+@message: "rtd-common";
+@table: "rtd-common";
 
 // Modules
-@accordion: "rtd-application";
-@calendar: "rtd-application";
-@checkbox: "rtd-application";
-@dimmer: "rtd-application";
-@dropdown: "rtd-application";
-@embed: "rtd-application";
-@modal: "rtd-application";
-@nag: "rtd-application";
-@popup: "rtd-application";
-@progress: "rtd-application";
-@slider: "rtd-application";
-@rating: "rtd-application";
-@search: "rtd-application";
-@shape: "rtd-application";
-@sidebar: "rtd-application";
-@sticky: "rtd-application";
-@tab: "rtd-application";
-@toast: "rtd-application";
-@transition: "rtd-application";
+@accordion: "rtd-common";
+@calendar: "rtd-common";
+@checkbox: "rtd-common";
+@dimmer: "rtd-common";
+@dropdown: "rtd-common";
+@embed: "rtd-common";
+@modal: "rtd-common";
+@nag: "rtd-common";
+@popup: "rtd-common";
+@progress: "rtd-common";
+@slider: "rtd-common";
+@rating: "rtd-common";
+@search: "rtd-common";
+@shape: "rtd-common";
+@sidebar: "rtd-common";
+@sticky: "rtd-common";
+@tab: "rtd-common";
+@toast: "rtd-common";
+@transition: "rtd-common";
 
 // Views
-@ad: "rtd-application";
-@card: "rtd-application";
-@comment: "rtd-application";
-@feed: "rtd-application";
-@item: "rtd-application";
-@statistic: "rtd-application";
+@ad: "rtd-common";
+@card: "rtd-common";
+@comment: "rtd-common";
+@feed: "rtd-common";
+@item: "rtd-common";
+@statistic: "rtd-common";
 
-// Path to theme packages
-@themesFolder: "~fomantic-ui-less/themes";
+// This path is very intention and shouldn't be changed. We have multiple
+// include paths set up in the less-loader (see webpack.config.mjs), and all
+// these paths contain a theme in the location `themes/{theme_name}`. By using
+// ordered include paths, less-loader will try to resolve the theme location in
+// the correct order, even if that theme is not in the expected path of:
+// `node_modules/fomantic-ui-less/themes/`
+@themesFolder: "themes";
 
-// Path to site override folder, relative to the package path in node_modules.
-// This path actually shouldn't be used at all, and instead the individual theme
-// paths should be used.
-@siteFolder: "../../src/sui/site";
+// This is the path to the `rtd-application` theme folder, which is now included 
+// as a site folder instead of a theme. The effect is the same however. This
+// resolves using the first less-loader path in Webpack.
+@siteFolder: "src/sui/themes/rtd-application/";
 
 // Import theme
 @import (multiple) "theme.less";
