--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ install_requires =
 
 [options.extras_require]
 docs =
-    Sphinx~=7.2
+    Sphinx<6
     sphinx_rtd_theme~=2.0.0
     sphinxcontrib-autoanysrc>=0.1.1
     sphinx-js~=3.2.1
