--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,11 @@ install_requires =
 
 [options.extras_require]
 docs =
-    Sphinx
-    sphinx_rtd_theme
-    sphinxcontrib-autoanysrc
-    sphinx-js
+    # We can't upgrade Sphinx because of sphinxcontrib-autoanysrc (Sphinx<5) and sphinx-js (Sphinx<6)
+    Sphinx<5
+    # Newer versions require Sphinx>=5
+    sphinxcontrib-applehelp==1.0.4
+    # We can't upgrade the theme because it requires Sphinx>=5
+    sphinx_rtd_theme<2
+    sphinxcontrib-autoanysrc>=0.1.1
+    sphinx-js~=3.2.1
