Docs: pin sphinxcontrib-devhelp

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ docs =
     Sphinx<5
     # Newer versions require Sphinx>=5
     sphinxcontrib-applehelp==1.0.4
+    sphinxcontrib-devhelp==1.0.2
     # We can't upgrade the theme because it requires Sphinx>=5
     sphinx_rtd_theme<2
     sphinxcontrib-autoanysrc>=0.1.1
