--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,7 +3,8 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.10"
+    # Python 3.9 is required here since we are using an old version of Sphinx
+    python: "3.9"
     nodejs: "16"
 
 python:
