--- a/setup.cfg
+++ b/setup.cfg
@@ -29,13 +29,8 @@ install_requires =
 
 [options.extras_require]
 docs =
-    # We can't upgrade Sphinx because of sphinxcontrib-autoanysrc (Sphinx<5) and sphinx-js (Sphinx<6)
-    Sphinx<5
-    # Newer versions require Sphinx>=5
-    sphinxcontrib-applehelp==1.0.4
-    sphinxcontrib-devhelp==1.0.2
-    sphinxcontrib-htmlhelp==1.0.4
-    # We can't upgrade the theme because it requires Sphinx>=5
-    sphinx_rtd_theme<2
-    sphinxcontrib-autoanysrc>=0.1.1
-    sphinx-js~=3.2.1
+    # We can't upgrade Sphinx because of sphinx-js (Sphinx<6)
+    Sphinx<6
+    sphinx_rtd_theme<3
+    sphinxcontrib-autoanysrc<1
+    sphinx-js
