--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,8 +1,9 @@
 version: 2
 
 build:
-  os: ubuntu-20.04
+  os: ubuntu-22.04
   tools:
+    # Python 3.9 is required here since we are using an old version of Sphinx
     python: "3.9"
     nodejs: "16"
 
