--- a/setup.cfg
+++ b/setup.cfg
@@ -29,9 +29,8 @@ install_requires =
 
 [options.extras_require]
 docs =
-    Jinja2~=2.3
-    MarkupSafe~=2.0.0
-    Sphinx~=4.5.0
-    sphinx_rtd_theme~=1.0.0
-    sphinxcontrib-autoanysrc>=0.1.1
-    sphinx-js~=3.2.1
+    # We can't upgrade Sphinx because of sphinx-js (Sphinx<6)
+    Sphinx<6
+    sphinx_rtd_theme<3
+    sphinxcontrib-autoanysrc<1
+    sphinx-js
