--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lato-font": "^3.0.0",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
+    "lit": "^3.1.2",
     "matchdep": "~2.0.0",
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^3.0.3",
