--- a/package.json
+++ b/package.json
@@ -86,5 +86,18 @@
         ]
       }
     }
+  },
+  "prettier": {
+    "overrides": [
+      {
+        "files": [
+          "**/*.overrides",
+          "**/*.variables"
+        ],
+        "options": {
+          "parser": "less"
+        }
+      }
+    ]
   }
 }
