More reformatting using explicit tab width
By default tab width detection seems rather random. Updates pre-commit
config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,6 +30,7 @@ repos:
     rev: "3.0.6"
     hooks:
       - id: djhtml
+        entry: djhtml --tabwidth 2
         files: '^readthedocsext/theme/templates/.*\.html'
   - repo: local
     hooks:
