--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,12 +9,16 @@ commands:
     description: "Run code linter"
     steps:
       - checkout
+      - run: npm ci
+      - run: npm run lint
+  run-lint-template:
+    description: "Run template linter"
+    executor: python/default
+    steps:
       - python/install-packages:
           args: djhtml
           pkg-manager: pip
           pypi-cache: false
-      - run: npm ci
-      - run: npm run lint
       - run: djhtml --tabwidth 2 readthedocsext/
   run-build:
     description: "Ensure built assets are up to date"
@@ -45,6 +49,7 @@ jobs:
     docker:
       - image: "cimg/node:16.14"
     steps:
+      - run-lint-template: {}
       - run-lint: {}
   build:
     docker:
