--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,23 +2,19 @@ version: 2.1
 
 orbs:
   browser-tools: circleci/browser-tools@1.4.7
-  python: circleci/python@2.1.1
 
 commands:
-  run-lint:
-    description: "Run code linter"
+  run-lint-node:
+    description: "Run Node linting"
     steps:
       - checkout
       - run: npm ci
       - run: npm run lint
-  run-lint-template:
-    description: "Run template linter"
-    executor: python/default
+  run-lint-python:
+    description: "Run Python linting"
     steps:
-      - python/install-packages:
-          args: djhtml
-          pkg-manager: pip
-          pypi-cache: false
+      - checkout
+      - pip install djhtml
       - run: djhtml --tabwidth 2 readthedocsext/
   run-build:
     description: "Ensure built assets are up to date"
@@ -45,12 +41,16 @@ commands:
       - run: npm test
 
 jobs:
-  lint:
+  lint-node:
     docker:
       - image: "cimg/node:16.14"
     steps:
-      - run-lint-template: {}
-      - run-lint: {}
+      - run-lint-node: {}
+  lint-python:
+    docker:
+      - image: "cimg/python:3.11.8"
+    steps:
+      - run-lint-python: {}
   build:
     docker:
       - image: "cimg/node:16.14"
@@ -66,6 +66,7 @@ workflows:
   version: 2
   tests:
     jobs:
-      - lint
+      - lint-node
+      - lint-python
       - build
       - test
