--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ commands:
     description: "Run Python linting"
     steps:
       - checkout
-      - pip install djhtml
+      - run: pip install djhtml
       - run: djhtml --tabwidth 2 readthedocsext/
   run-build:
     description: "Ensure built assets are up to date"
