--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "less-loader": "^11.1.3",
     "matchdep": "~2.0.0",
     "mini-css-extract-plugin": "^2.7.6",
+    "plausible-tracker": "^0.3.8",
     "prettier": "^3.0.3",
     "resolve-url-loader": "^5.0.0",
     "rollup-plugin-lit-css": "^4.0.1",
