--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
       - run: npm ci
       - run: npm run lint
       - run: pip install pre-commit
-      - run: pre-commit run --all-files
+      - run: pre-commit run --from-ref origin/HEAD --to-ref HEAD
   build:
     docker:
       - image: "cimg/node:16.14"
