--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,6 +30,7 @@ repos:
     rev: v1.34.1
     hooks:
       - id: djlint-django
+      - id: djlint-reformat-django
   - repo: local
     hooks:
       - id: check-build-assets
