--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: /readthedocsext/theme/locale/**/*.po
-    translation: '%original_path%/%file_name%.mo'
+  - source: /readthedocsext/theme/locale/en/LC_MESSAGES/*.po
+    translations: '/readthedocsext/theme/locale/%locale_with_underscore%/LC_MESSAGES/%file_name%.po'
