Try djlint instead of djhtml (#371)
* Try djlint instead of djhtml

* Also reformat, plus test file

* Ignore image width/height attribute requirement

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,12 +26,11 @@ repos:
       - id: destroyed-symlinks
       - id: end-of-file-fixer
         exclude: "^readthedocsext/theme/static/.*$"
-  - repo: https://github.com/rtts/djhtml
-    rev: "3.0.6"
+  - repo: https://github.com/djlint/djLint
+    rev: v1.34.1
     hooks:
-      - id: djhtml
-        entry: djhtml --tabwidth 2
-        files: '^readthedocsext/theme/templates/.*\.html'
+      - id: djlint-django
+      - id: djlint-reformat-django
   - repo: local
     hooks:
       - id: check-build-assets
