--- a/.djlintrc
+++ b/.djlintrc
@@ -1,5 +1,7 @@
 {
   "indent": "2",
   "preserve_blank_lines": true,
-  "ignore": "H006"
+  "ignore": "H006",
+  "custom_html": "readthedocs-\\w+,readthedocs-\\w+-\\w+",
+  "format_attribute_template_tags": true
 }
