--- a/.djlintrc
+++ b/.djlintrc
@@ -3,5 +3,5 @@
   "preserve_blank_lines": true,
   "ignore": "H006",
   "custom_html": "readthedocs-\\w+,readthedocs-\\w+-\\w+",
-  "format_attribute_template_tags": true
+  "format_attribute_template_tags": false
 }
