--- a/.djlintrc
+++ b/.djlintrc
@@ -2,5 +2,7 @@
   "indent": "2",
   "preserve_blank_lines": true,
   "ignore": "H006",
-  "max_line_length": 80
+  "max_line_length": 80,
+  "custom_html": "readthedocs-\\w+,readthedocs-\\w+-\\w+",
+  "format_attribute_template_tags": false
 }
