--- a/.djlintrc
+++ b/.djlintrc
@@ -3,6 +3,6 @@
   "preserve_blank_lines": true,
   "ignore": "H006",
   "max_line_length": 80,
-  "custom_html": "readthedocs\\(-\\w+\\)+",
+  "custom_html": "readthedocs-\\w+-\\w+-\\w+,readthedocs-\\w+-\\w+,readthedocs-\\w+",
   "format_attribute_template_tags": false
 }
