--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-image": "^3.0.2",
     "@rollup/plugin-json": "^6.0.0",
+    "@sentry/browser": "^8.30.0",
     "@stripe/stripe-js": "^1.54.0",
     "@web/dev-server-import-maps": "^0.1.1",
     "@web/test-runner": "^0.17.1",
