--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-transform-modules-commonjs": "^7.23.0",
     "@babel/preset-env": "^7.22.20",
+    "@lit/context": "^1.1.3",
+    "@lit/localize": "^0.12.2",
     "@open-wc/testing": "^3.2.0",
     "@readthedocs/sui-common-theme": "github:readthedocs/sui-common-theme#12629bb",
     "@rollup/plugin-commonjs": "^25.0.4",
