--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
     "dayjs": "^1.8.29",
+    "dompurify": "^3.2.2",
     "file-loader": "^6.2.0",
     "imports-loader": "^4.0.1",
     "jquery": "^3.4.1",
