Some docs on stylesheets and update linting fix to KO hidden pattern
This adds some more documentation sourced from our theme styles,
including the pattern we've been using to replace the Knockout
``visible`` binding with a pattern that doesn't need inline styles.

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,8 +29,7 @@ install_requires =
 
 [options.extras_require]
 docs =
-    # We can't upgrade Sphinx because of sphinx-js (Sphinx<6)
-    Sphinx<6
-    sphinx_rtd_theme<3
-    sphinxcontrib-autoanysrc<1
-    sphinx-js
+    Sphinx>6
+    sphinx_rtd_theme
+    sphinxcontrib-autoanysrc>=0.2.0
+    sphinx-js>=4
