--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ setenv =
     LANG=en_US.UTF-8
     LC_ALL=en_US.UTF-8
     PATH={toxinidir}/node_modules/.bin:{env:PATH}
-passenv = CI HOME
+passenv = CI, HOME
 
 [testenv:docs]
 description = Build readthedocsext-theme documentation
